rust/kcl-lib/tests/sketch_block_unexpected_shorthand_arg/execution_error.snap
---
source: kcl-lib/src/simulation_tests.rs
description: Error from executing sketch_block_unexpected_shorthand_arg.kcl
---
KCL Semantic error

  × semantic: `foo` is not an argument of `sketch`
   ╭─[4:21]
 3 │ foo = 2
 4 │ s = sketch(on = XY, foo) {
   ·                     ─┬─
   ·                      ╰── main
 5 │   circle1 = circle(start = [var 0.42mm, var 0.2mm], center = [var 0.25mm, var 0.35mm])
   ╰────
